--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,10 @@
 <div class="main-screen"></div>
 <section class="new-generation">
     <div class="info new-generation__info">
-        <img src="images/Icon.png" alt="" class="info__logo">
-        <h3 class="info__title">A new generation of vintage bike</h3>
-        <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        <img src="images/Icon.png" alt="" class="info__logo new-generation__logo">
+        <h3 class="info__title new-generation__title">A new generation of vintage bike</h3>
+        <p class="info__text new-generation__text">Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
             when an unknown printer took a galley of type and scrambled it to make a type specimen book.
             It has survived not only five centuries, but also the leap into electronic typesetting, remaining
@@ -41,9 +42,10 @@
         </div>
         <div class="generation-info__item">
             <div class="info generation-info__item-info">
-                <img src="images/Icon2.png" alt="" class="info__logo">
+                <img src="images/Icon2.png" alt="" class="info__logo generation-info__item-logo">
                 <h3 class="info__title generation-info__item-title">Vintage oliva</h3>
-                <p class="info__text generation-info__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                <p class="info__text generation-info__item-text">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                     printer took a galley of type and scrambled it to make a type specimen book. It has survived.
                 </p>
@@ -53,10 +55,11 @@
     </div>
     <div class="generation-info__items">
         <div class="generation-info__item">
-            <div class="info">
-                <img src="images/Icon5.png" alt="" class="info__logo">
-                <h3 class="info__title">La boriosa</h3>
-                <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+            <div class="info generation-info__item-info">
+                <img src="images/Icon5.png" alt="" class="info__logo generation-info__item-logo">
+                <h3 class="info__title generation-info__item-title">La boriosa</h3>
+                <p class="info__text generation-info__item-text">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem
                     Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
                     a galley of type and scrambled it to make a type specimen book. It has survived.
                 </p>
@@ -73,10 +76,11 @@
             <img src="images/Logo6.png" alt="" class="image-container__logo">
         </div>
         <div class="generation-info__item">
-            <div class="info">
+            <div class="info generation-info__item-info">
                 <img src="images/Icon7.png" alt="" class="info__logo">
-                <h3 class="info__title">retrò Bike - M. Hulot</h3>
-                <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                <h3 class="info__title generation-info__item-title">retrò Bike - M. Hulot</h3>
+                <p class="info__text generation-info__item-text">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem
                     Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
                     a galley of type and scrambled it to make a type specimen book. It has survived.
                 </p>
@@ -89,16 +93,16 @@
     </div>
 </section>
 <section class="contact">
-    <div class="info">
-        <img src="images/TwitterSlider.png" alt="" class="info__logo">
-        <h3 class="info__title">AOD New York @aod <span class="time">/ 35 min</span></h3>
-        <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
+    <div class="info contact-info">
+        <img src="images/TwitterSlider.png" alt="" class="info__logo contact-logo">
+        <h3 class="info__title contact-title">AOD New York @aod <span class="contact-time">/ 35 min</span></h3>
+        <p class="info__text contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
             rhoncus. Nullam a
             odio porttitor, dictum turpis vitae, pretium ante amet.
         </p>
     </div>
-    <div class="info">
+    <div class="info contact__info">
         <img src="images/TwitterSlider.png" alt="">
         <h3 class="info__title">AOD New York @aod <span class="time">/ 35 min</span></h3>
         <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
@@ -107,7 +111,7 @@
             odio porttitor, dictum turpis vitae, pretium ante amet.
         </p>
     </div>
-    <div class="info">
+    <div class="info contact__info">
         <img src="images/TwitterSlider.png" alt="">
         <h3 class="info__title">AOD New York @aod <span class="info__title__time">/ 35 min</span></h3>
         <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
