--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css"/>
     <link rel="stylesheet" href="style/style.css">
@@ -20,7 +21,6 @@
     <a href="#" class="menu__link">Shop</a>
     <a href="#" class="menu__link">Contact</a>
 </nav>
-
 <div class="main-screen"></div>
 <section class="new-generation">
     <div class="info new-generation__info">
@@ -77,7 +77,7 @@
         </div>
         <div class="generation-info__item">
             <div class="info generation-info__item-info">
-                <img src="images/Icon7.png" alt="" class="info__logo">
+                <img src="images/Icon7.png" alt="" class="info__logo generation-info__item-logo">
                 <h3 class="info__title generation-info__item-title">retrò Bike - M. Hulot</h3>
                 <p class="info__text generation-info__item-text">Lorem Ipsum is simply dummy text of the printing and
                     typesetting industry. Lorem
