--- a/app/index.html
+++ b/app/index.html
@@ -124,82 +124,71 @@
 <section class="gallery">
     <div class="gallery__items">
         <div class="item">
-            <div class="item--hover">
-                <a href="#" class="item--hover__link">
-                    <img src="images/Shopnow.png" alt="">
-                    <div>
-                        Shop now
-                    </div>
-                </a>
-            </div>
-            <div class="item--hover">
-                <a href="#" class="item--hover__link">
-                    <img src="images/Shopnow.png" alt="">
-                    <div>
-                        Shop now
-                    </div>
-                </a>
-            </div>
+            <a href="#" class="item--hover">
+                <img src="images/Shopnow.png" alt="" class="item--hover__img">
+                <div>
+                    Shop now
+                </div>
+            </a>
+            <a href="#" class="item--hover">
+                <img src="images/Shopnow.png" alt="" class="item--hover__img">
+                <div>
+                    Shop now
+                </div>
+            </a>
+
         </div>
         <div class="item">
-            <div class="item--hover">
-                <a href="#" class="item--hover__link">
-                    <img src="images/Shopnow.png" alt="">
-                    <div>
-                        Shop now
-                    </div>
-                </a>
-            </div>
+            <a href="#" class="item--hover">
+                <img src="images/Shopnow.png" alt="" class="item--hover__img">
+                <div>
+                    Shop now
+                </div>
+            </a>
         </div>
     </div>
     <div class="gallery__items">
         <div class="item">
-            <div class="item--hover">
-                <a href="#" class="item--hover__link">
-                    <img src="images/Shopnow.png" alt="">
-                    <div>
-                        Shop now
-                    </div>
-                </a>
-            </div>
-            <div class="item--hover">
-                <a href="#" class="item--hover__link">
-                    <img src="images/Shopnow.png" alt="">
-                    <div>
-                        Shop now
-                    </div>
-                </a>
-            </div>
+
+            <a href="#" class="item--hover">
+                <img src="images/Shopnow.png" alt="" class="item--hover__img">
+                <div>
+                    Shop now
+                </div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="#" class="item--hover">
+                <img src="images/Shopnow.png" alt="" class="item--hover__img">
+                <div>
+                    Shop now
+                </div>
+            </a>
         </div>
     </div>
     <div class="gallery__items">
         <div class="item">
-            <div class="item--hover">
-                <a href="#" class="item--hover__link">
-                    <img src="images/Shopnow.png" alt="">
-                    <div>
-                        Shop now
-                    </div>
-                </a>
-            </div>
+            <a href="#" class="item--hover">
+                <img src="images/Shopnow.png" alt="" class="item--hover__img">
+                <div>
+                    Shop now
+                </div>
+            </a>
+
         </div>
         <div class="item">
-            <div class="item--hover">
-                <a href="#" class="item--hover__link">
-                    <img src="images/Shopnow.png" alt="">
-                    <div>
-                        Shop now
-                    </div>
-                </a>
-            </div>
-            <div class="item--hover">
-                <a href="#" class="item--hover__link">
-                    <img src="images/Shopnow.png" alt="">
-                    <div>
-                        Shop now
-                    </div>
-                </a>
-            </div>
+            <a href="#" class="item--hover">
+                <img src="images/Shopnow.png" alt="" class="item--hover__img">
+                <div>
+                    Shop now
+                </div>
+            </a>
+            <a href="#" class="item--hover">
+                <img src="images/Shopnow.png" alt="" class="item--hover__img">
+                <div>
+                    Shop now
+                </div>
+            </a>
         </div>
     </div>
 </section>
