--- a/app/index.html
+++ b/app/index.html
@@ -102,19 +102,19 @@
             odio porttitor, dictum turpis vitae, pretium ante amet.
         </p>
     </div>
-    <div class="info contact__info">
-        <img src="images/TwitterSlider.png" alt="">
-        <h3 class="info__title">AOD New York @aod <span class="time">/ 35 min</span></h3>
-        <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
+    <div class="info contact-info">
+        <img src="images/TwitterSlider.png" alt="" class="info__logo contact-logo">
+        <h3 class="info__title contact-title">AOD New York @aod <span class="time">/ 35 min</span></h3>
+        <p class="info__text contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
             rhoncus. Nullam a
             odio porttitor, dictum turpis vitae, pretium ante amet.
         </p>
     </div>
-    <div class="info contact__info">
-        <img src="images/TwitterSlider.png" alt="">
-        <h3 class="info__title">AOD New York @aod <span class="info__title__time">/ 35 min</span></h3>
-        <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
+    <div class="info contact-info">
+        <img src="images/TwitterSlider.png" alt="" class="info__logo contact-logo">
+        <h3 class="info__title contact-title">AOD New York @aod <span class="info__title__time">/ 35 min</span></h3>
+        <p class="info__text contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
             rhoncus. Nullam a
             odio porttitor, dictum turpis vitae, pretium ante amet.
@@ -123,22 +123,7 @@
 </section>
 <section class="gallery">
     <div class="gallery__items">
-        <div class="item">
-            <a href="#" class="item--hover">
-                <img src="images/Shopnow.png" alt="" class="item--hover__img">
-                <div>
-                    Shop now
-                </div>
-            </a>
-            <a href="#" class="item--hover">
-                <img src="images/Shopnow.png" alt="" class="item--hover__img">
-                <div>
-                    Shop now
-                </div>
-            </a>
-
-        </div>
-        <div class="item">
+        <div class="gallery__item">
             <a href="#" class="item--hover">
                 <img src="images/Shopnow.png" alt="" class="item--hover__img">
                 <div>
@@ -146,10 +131,7 @@
                 </div>
             </a>
         </div>
-    </div>
-    <div class="gallery__items">
-        <div class="item">
-
+        <div class="gallery__item">
             <a href="#" class="item--hover">
                 <img src="images/Shopnow.png" alt="" class="item--hover__img">
                 <div>
@@ -157,7 +139,7 @@
                 </div>
             </a>
         </div>
-        <div class="item">
+        <div class="gallery__item">
             <a href="#" class="item--hover">
                 <img src="images/Shopnow.png" alt="" class="item--hover__img">
                 <div>
@@ -167,7 +149,25 @@
         </div>
     </div>
     <div class="gallery__items">
-        <div class="item">
+        <div class="gallery__item">
+            <a href="#" class="item--hover">
+                <img src="images/Shopnow.png" alt="" class="item--hover__img">
+                <div>
+                    Shop now
+                </div>
+            </a>
+        </div>
+        <div class="gallery__item">
+            <a href="#" class="item--hover">
+                <img src="images/Shopnow.png" alt="" class="item--hover__img">
+                <div>
+                    Shop now
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="gallery__items">
+        <div class="gallery__item">
             <a href="#" class="item--hover">
                 <img src="images/Shopnow.png" alt="" class="item--hover__img">
                 <div>
@@ -176,13 +176,15 @@
             </a>
 
         </div>
-        <div class="item">
+        <div class="gallery__item">
             <a href="#" class="item--hover">
                 <img src="images/Shopnow.png" alt="" class="item--hover__img">
                 <div>
                     Shop now
                 </div>
             </a>
+        </div>
+        <div class="gallery__item">
             <a href="#" class="item--hover">
                 <img src="images/Shopnow.png" alt="" class="item--hover__img">
                 <div>
@@ -199,8 +201,8 @@
     <img src="images/Logo2.png" alt="" class="contact-with-us__logo">
     <div class="contact-with-us__title">Stay on the saddle!</div>
     <div class="contact-with-us__container">
-        <input type="email" placeholder="enter your email..." class="contact-with-us__container__input">
-        <button type="submit" class="contact-with-us__container__btn">GO</button>
+        <input type="email" placeholder="enter your email..." class="contact-with-us__input">
+        <button type="submit" class="contact-with-us__btn">GO</button>
     </div>
 </section>
 <footer class="footer">
@@ -224,7 +226,7 @@
     <div class="footer__item author">
         <div class="author__by">Handcrafted by</div>
         <a href="#" class="author__link">
-            <img src="images/YeboLogo.png" alt="" class="author__link__image">
+            <img src="images/YeboLogo.png" alt="" class="author__link-image">
         </a>
     </div>
 </footer>
