--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="minimum-scale=1, initial-scale-1,width=device-width,shrink-to-fit=no"/>
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css"/>
@@ -22,18 +23,16 @@
     <a href="#" class="menu__link">Contact</a>
 </nav>
 <div class="main-screen"></div>
-<section class="new-generation">
-    <div class="info new-generation__info">
-        <img src="images/Icon.png" alt="" class="info__logo new-generation__logo">
-        <h3 class="info__title new-generation__title">A new generation of vintage bike</h3>
-        <p class="info__text new-generation__text">Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-            essentially unchanged.
-        </p>
-    </div>
+<section class="new-generation info new-generation__info">
+    <img src="images/Icon.png" alt="" class="info__logo new-generation__logo">
+    <h3 class="info__title new-generation__title">A new generation of vintage bike</h3>
+    <p class="info__text new-generation__text">Lorem Ipsum is simply dummy text of the printing and typesetting
+        industry.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+        essentially unchanged.
+    </p>
 </section>
 <section class="generation-info">
     <div class="generation-info__items">
