--- a/app/index.html
+++ b/app/index.html
@@ -213,13 +213,13 @@
     </div>
     <div class="footer__item social-icons">
         <a href="#" class="social-icons__link">
-            <img src="images/Twitter.png" alt="" class="social-icons__link__image">
+            <img src="images/Twitter.png" alt="" class="social-icons__i-link">
         </a>
         <a href="#" class="social-icons__link">
-            <img src="images/Facebook.png" alt="" class="social-icons__link__image">
+            <img src="images/Facebook.png" alt="" class="social-icons__i-link">
         </a>
         <a href="#" class="social-icons__link">
-            <img src="images/Pinterest.png" alt="" class="social-icons__link__image">
+            <img src="images/Pinterest.png" alt="" class="social-icons__i-link">
         </a>
     </div>
     <div class="footer__item author">
