--- a/app/index.html
+++ b/app/index.html
@@ -103,7 +103,7 @@
     </div>
     <div class="info contact-info">
         <img src="images/TwitterSlider.png" alt="" class="info__logo contact-logo">
-        <h3 class="info__title contact-title">AOD New York @aod <span class="time">/ 35 min</span></h3>
+        <h3 class="info__title contact-title">AOD New York @aod <span class="contact-time">/ 35 min</span></h3>
         <p class="info__text contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
             rhoncus. Nullam a
@@ -112,7 +112,7 @@
     </div>
     <div class="info contact-info">
         <img src="images/TwitterSlider.png" alt="" class="info__logo contact-logo">
-        <h3 class="info__title contact-title">AOD New York @aod <span class="info__title__time">/ 35 min</span></h3>
+        <h3 class="info__title contact-title">AOD New York @aod <span class="contact-time">/ 35 min</span></h3>
         <p class="info__text contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
             rhoncus. Nullam a
