--- a/app/index.html
+++ b/app/index.html
@@ -92,28 +92,28 @@
     </div>
 </section>
 <section class="contact">
-    <div class="info contact-info">
-        <img src="images/TwitterSlider.png" alt="" class="info__logo contact-logo">
-        <h3 class="info__title contact-title">AOD New York @aod <span class="contact-time">/ 35 min</span></h3>
-        <p class="info__text contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
+    <div class="info contact__info">
+        <img src="images/TwitterSlider.png" alt="" class="info__logo contact__logo">
+        <h3 class="info__title contact__title">AOD New York @aod <span class="contact__time">/ 35 min</span></h3>
+        <p class="info__text contact__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
             rhoncus. Nullam a
             odio porttitor, dictum turpis vitae, pretium ante amet.
         </p>
     </div>
-    <div class="info contact-info">
-        <img src="images/TwitterSlider.png" alt="" class="info__logo contact-logo">
-        <h3 class="info__title contact-title">AOD New York @aod <span class="contact-time">/ 35 min</span></h3>
-        <p class="info__text contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
+    <div class="info contact__info">
+        <img src="images/TwitterSlider.png" alt="" class="info__logo contact__logo">
+        <h3 class="info__title contact__title">AOD New York @aod <span class="contact__time">/ 35 min</span></h3>
+        <p class="info__text contact__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
             rhoncus. Nullam a
             odio porttitor, dictum turpis vitae, pretium ante amet.
         </p>
     </div>
-    <div class="info contact-info">
-        <img src="images/TwitterSlider.png" alt="" class="info__logo contact-logo">
-        <h3 class="info__title contact-title">AOD New York @aod <span class="contact-time">/ 35 min</span></h3>
-        <p class="info__text contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
+    <div class="info contact__info">
+        <img src="images/TwitterSlider.png" alt="" class="info__logo contact__logo">
+        <h3 class="info__title contact__title">AOD New York @aod <span class="contact__time">/ 35 min</span></h3>
+        <p class="info__text contact__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
             rhoncus. Nullam a
             odio porttitor, dictum turpis vitae, pretium ante amet.
@@ -123,72 +123,72 @@
 <section class="gallery">
     <div class="gallery__items">
         <div class="gallery__item">
-            <a href="#" class="item--hover">
-                <img src="images/Shopnow.png" alt="" class="item--hover__img">
-                <div>
-                    Shop now
-                </div>
+            <a href="#" class="item-link">
+                <img src="images/Shopnow.png" alt="" class="item-link__img">
+
+                Shop now
+
             </a>
         </div>
         <div class="gallery__item">
-            <a href="#" class="item--hover">
-                <img src="images/Shopnow.png" alt="" class="item--hover__img">
-                <div>
-                    Shop now
-                </div>
+            <a href="#" class="item-link">
+                <img src="images/Shopnow.png" alt="" class="item-link__img">
+
+                Shop now
+
             </a>
         </div>
         <div class="gallery__item">
-            <a href="#" class="item--hover">
-                <img src="images/Shopnow.png" alt="" class="item--hover__img">
-                <div>
-                    Shop now
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="gallery__items">
-        <div class="gallery__item">
-            <a href="#" class="item--hover">
-                <img src="images/Shopnow.png" alt="" class="item--hover__img">
-                <div>
-                    Shop now
-                </div>
-            </a>
-        </div>
-        <div class="gallery__item">
-            <a href="#" class="item--hover">
-                <img src="images/Shopnow.png" alt="" class="item--hover__img">
-                <div>
-                    Shop now
-                </div>
+            <a href="#" class="item-link">
+                <img src="images/Shopnow.png" alt="" class="item-link__img">
+
+                Shop now
+
             </a>
         </div>
     </div>
     <div class="gallery__items">
         <div class="gallery__item">
-            <a href="#" class="item--hover">
-                <img src="images/Shopnow.png" alt="" class="item--hover__img">
-                <div>
-                    Shop now
-                </div>
+            <a href="#" class="item-link">
+                <img src="images/Shopnow.png" alt="" class="item-link__img">
+
+                Shop now
+
+            </a>
+        </div>
+        <div class="gallery__item">
+            <a href="#" class="item-link">
+                <img src="images/Shopnow.png" alt="" class="item-link__img">
+
+                Shop now
+
+            </a>
+        </div>
+    </div>
+    <div class="gallery__items">
+        <div class="gallery__item">
+            <a href="#" class="item-link">
+                <img src="images/Shopnow.png" alt="" class="item-link__img">
+
+                Shop now
+
             </a>
 
         </div>
         <div class="gallery__item">
-            <a href="#" class="item--hover">
-                <img src="images/Shopnow.png" alt="" class="item--hover__img">
-                <div>
-                    Shop now
-                </div>
+            <a href="#" class="item-link">
+                <img src="images/Shopnow.png" alt="" class="item-link__img">
+
+                Shop now
+
             </a>
         </div>
         <div class="gallery__item">
-            <a href="#" class="item--hover">
-                <img src="images/Shopnow.png" alt="" class="item--hover__img">
-                <div>
-                    Shop now
-                </div>
+            <a href="#" class="item-link">
+                <img src="images/Shopnow.png" alt="" class="item-link__img">
+
+                Shop now
+
             </a>
         </div>
     </div>
@@ -207,8 +207,8 @@
 <footer class="footer">
     <div class="footer__item address">
         <div class="address__company">AOD New York</div>
-        <div class="address__street">2250 Lexington Avenue</div>
-        <div class="address__city"><i>New York, NY 10035 - <a href="mailto:info@domain.com" class="address__link">info@domain.com</a></i>
+        <div>2250 Lexington Avenue</div>
+        <div><i>New York, NY 10035 - <a href="mailto:info@domain.com" class="address__link">info@domain.com</a></i>
         </div>
     </div>
     <div class="footer__item social-icons">
