--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-<div class="hamburg-menu">
+<div class="hamburg-menu" tabindex="1">
     <div class="hamburg-menu__burger-nav"></div>
 </div>
 <nav class="menu" id="menu">
