--- a/app/index.html
+++ b/app/index.html
@@ -207,9 +207,9 @@
 <footer class="footer">
     <div class="footer__item address">
         <div class="address__company">AOD New York</div>
-        <div>2250 Lexington Avenue</div>
-        <div><i>New York, NY 10035 - <a href="mailto:info@domain.com" class="address__link">info@domain.com</a></i>
-        </div>
+        2250 Lexington Avenue <br>
+        <i>New York, NY 10035 - <a href="mailto:info@domain.com" class="address__link">info@domain.com</a></i>
+
     </div>
     <div class="footer__item social-icons">
         <a href="#" class="social-icons__link">
