--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <a href="#" class="menu__link">Contact</a>
 </nav>
 <div class="main-screen"></div>
-<section class="new-generation info new-generation__info">
+<section class="new-generation info">
     <img src="images/Icon.png" alt="" class="info__logo new-generation__logo">
     <h3 class="info__title new-generation__title">A new generation of vintage bike</h3>
     <p class="info__text new-generation__text">Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -123,42 +123,24 @@
 <section class="gallery">
     <div class="gallery__items">
         <div class="gallery__item">
-            <a href="#" class="item-link">
-                <img src="images/Shopnow.png" alt="" class="item-link__img">
+            <a href="#" class="gallery__item-link">
+                <img src="images/Shopnow.png" alt="" class="gallery__item-img">
 
                 Shop now
 
             </a>
         </div>
         <div class="gallery__item">
-            <a href="#" class="item-link">
-                <img src="images/Shopnow.png" alt="" class="item-link__img">
+            <a href="#" class="gallery__item-link">
+                <img src="images/Shopnow.png" alt="" class="gallery__item-img">
 
                 Shop now
 
             </a>
         </div>
         <div class="gallery__item">
-            <a href="#" class="item-link">
-                <img src="images/Shopnow.png" alt="" class="item-link__img">
-
-                Shop now
-
-            </a>
-        </div>
-    </div>
-    <div class="gallery__items">
-        <div class="gallery__item">
-            <a href="#" class="item-link">
-                <img src="images/Shopnow.png" alt="" class="item-link__img">
-
-                Shop now
-
-            </a>
-        </div>
-        <div class="gallery__item">
-            <a href="#" class="item-link">
-                <img src="images/Shopnow.png" alt="" class="item-link__img">
+            <a href="#" class="gallery__item-link">
+                <img src="images/Shopnow.png" alt="" class="gallery__item-img">
 
                 Shop now
 
@@ -167,8 +149,26 @@
     </div>
     <div class="gallery__items">
         <div class="gallery__item">
-            <a href="#" class="item-link">
-                <img src="images/Shopnow.png" alt="" class="item-link__img">
+            <a href="#" class="gallery__item-link">
+                <img src="images/Shopnow.png" alt="" class="gallery__item-img">
+
+                Shop now
+
+            </a>
+        </div>
+        <div class="gallery__item">
+            <a href="#" class="gallery__item-link">
+                <img src="images/Shopnow.png" alt="" class="gallery__item-img">
+
+                Shop now
+
+            </a>
+        </div>
+    </div>
+    <div class="gallery__items">
+        <div class="gallery__item">
+            <a href="#" class="gallery__item-link">
+                <img src="images/Shopnow.png" alt="" class="gallery__item-img">
 
                 Shop now
 
@@ -176,16 +176,16 @@
 
         </div>
         <div class="gallery__item">
-            <a href="#" class="item-link">
-                <img src="images/Shopnow.png" alt="" class="item-link__img">
+            <a href="#" class="gallery__item-link">
+                <img src="images/Shopnow.png" alt="" class="gallery__item-img">
 
                 Shop now
 
             </a>
         </div>
         <div class="gallery__item">
-            <a href="#" class="item-link">
-                <img src="images/Shopnow.png" alt="" class="item-link__img">
+            <a href="#" class="gallery__item-link">
+                <img src="images/Shopnow.png" alt="" class="gallery__item-img">
 
                 Shop now
 
