--- a/app/index.html
+++ b/app/index.html
@@ -17,14 +17,14 @@
     <a href="#" class="menu__link">About us</a>
     <a href="#" class="menu__link">Work</a>
     <a href="#" class="menu__link">
-        <img src="images/Logo2.png" alt="" class="menu__i-logo">
+        <img src="images/Logo2.jpg" alt="" class="menu__i-logo">
     </a>
     <a href="#" class="menu__link">Shop</a>
     <a href="#" class="menu__link">Contact</a>
 </nav>
 <div class="main-screen"></div>
 <section class="new-generation info">
-    <img src="images/Icon.png" alt="" class="info__logo new-generation__logo">
+    <img src="images/Icon.jpg" alt="" class="info__logo new-generation__logo">
     <h3 class="info__title new-generation__title">A new generation of vintage bike</h3>
     <p class="info__text new-generation__text">Lorem Ipsum is simply dummy text of the printing and typesetting
         industry.
@@ -41,7 +41,7 @@
         </div>
         <div class="generation-info__item">
             <div class="info generation-info__item-info">
-                <img src="images/Icon2.png" alt="" class="info__logo generation-info__item-logo">
+                <img src="images/Icon2.jpg" alt="" class="info__logo generation-info__item-logo">
                 <h3 class="info__title generation-info__item-title">Vintage oliva</h3>
                 <p class="info__text generation-info__item-text">Lorem Ipsum is simply dummy text of the printing and
                     typesetting industry.
@@ -55,7 +55,7 @@
     <div class="generation-info__items">
         <div class="generation-info__item">
             <div class="info generation-info__item-info">
-                <img src="images/Icon5.png" alt="" class="info__logo generation-info__item-logo">
+                <img src="images/Icon5.jpg" alt="" class="info__logo generation-info__item-logo">
                 <h3 class="info__title generation-info__item-title">La boriosa</h3>
                 <p class="info__text generation-info__item-text">Lorem Ipsum is simply dummy text of the printing and
                     typesetting industry. Lorem
@@ -76,7 +76,7 @@
         </div>
         <div class="generation-info__item">
             <div class="info generation-info__item-info">
-                <img src="images/Icon7.png" alt="" class="info__logo generation-info__item-logo">
+                <img src="images/Icon7.jpg" alt="" class="info__logo generation-info__item-logo">
                 <h3 class="info__title generation-info__item-title">retrò Bike - M. Hulot</h3>
                 <p class="info__text generation-info__item-text">Lorem Ipsum is simply dummy text of the printing and
                     typesetting industry. Lorem
@@ -93,7 +93,7 @@
 </section>
 <section class="contact">
     <div class="info contact__info">
-        <img src="images/TwitterSlider.png" alt="" class="info__logo contact__logo">
+        <img src="images/TwitterSlider.jpg" alt="" class="info__logo contact__logo">
         <h3 class="info__title contact__title">AOD New York @aod <span class="contact__time">/ 35 min</span></h3>
         <p class="info__text contact__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
@@ -102,7 +102,7 @@
         </p>
     </div>
     <div class="info contact__info">
-        <img src="images/TwitterSlider.png" alt="" class="info__logo contact__logo">
+        <img src="images/TwitterSlider.jpg" alt="" class="info__logo contact__logo">
         <h3 class="info__title contact__title">AOD New York @aod <span class="contact__time">/ 35 min</span></h3>
         <p class="info__text contact__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
@@ -111,7 +111,7 @@
         </p>
     </div>
     <div class="info contact__info">
-        <img src="images/TwitterSlider.png" alt="" class="info__logo contact__logo">
+        <img src="images/TwitterSlider.jpg" alt="" class="info__logo contact__logo">
         <h3 class="info__title contact__title">AOD New York @aod <span class="contact__time">/ 35 min</span></h3>
         <p class="info__text contact__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
@@ -197,7 +197,7 @@
     <button class="discover__button">Discover the shop</button>
 </section>
 <section class="contact-with-us">
-    <img src="images/Logo2.png" alt="" class="contact-with-us__logo">
+    <img src="images/Logo2.jpg" alt="" class="contact-with-us__logo">
     <div class="contact-with-us__title">Stay on the saddle!</div>
     <div class="contact-with-us__container">
         <input type="email" placeholder="enter your email..." class="contact-with-us__input">
@@ -213,19 +213,19 @@
     </div>
     <div class="footer__item social-icons">
         <a href="#" class="social-icons__link">
-            <img src="images/Twitter.png" alt="" class="social-icons__i-link">
+            <img src="images/Twitter.jpg" alt="" class="social-icons__i-link">
         </a>
         <a href="#" class="social-icons__link">
-            <img src="images/Facebook.png" alt="" class="social-icons__i-link">
+            <img src="images/Facebook.jpg" alt="" class="social-icons__i-link">
         </a>
         <a href="#" class="social-icons__link">
-            <img src="images/Pinterest.png" alt="" class="social-icons__i-link">
+            <img src="images/Pinterest.jpg" alt="" class="social-icons__i-link">
         </a>
     </div>
     <div class="footer__item author">
         <div class="author__by">Handcrafted by</div>
         <a href="#" class="author__link">
-            <img src="images/YeboLogo.png" alt="" class="author__link-image">
+            <img src="images/YeboLogo.jpg" alt="" class="author__link-image">
         </a>
     </div>
 </footer>
