--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <a href="#" class="menu__link">About us</a>
     <a href="#" class="menu__link">Work</a>
     <a href="#" class="menu__link">
-        <img src="images/Logo2.jpg" alt="" class="menu__i-logo">
+        <img src="images/Logo.png" alt="" class="menu__i-logo">
     </a>
     <a href="#" class="menu__link">Shop</a>
     <a href="#" class="menu__link">Contact</a>
