--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <meta name="viewport" content="minimum-scale=1, initial-scale-1,width=device-width,shrink-to-fit=no"/>
+    <meta name="viewport" content="minimum-scale=1, initial-scale-1,width=device-width,shrink-to-fit=no">
     <link rel="stylesheet" href="style/reset.css">
-    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -17,17 +17,17 @@
     <a href="#" class="menu__link">About us</a>
     <a href="#" class="menu__link">Work</a>
     <a href="#" class="menu__link">
-        <img src="images/Logo.png" alt="" class="menu__i-logo">
+        <img src="images/Logo.png" alt="Logo" class="menu__i-logo">
     </a>
     <a href="#" class="menu__link">Shop</a>
     <a href="#" class="menu__link">Contact</a>
 </nav>
 <div class="main-screen"></div>
 <section class="new-generation info">
-    <img src="images/Icon.jpg" alt="" class="info__logo new-generation__logo">
+    <img src="images/Icon.jpg" alt="New Generation" class="info__logo new-generation__logo">
     <h3 class="info__title new-generation__title">A new generation of vintage bike</h3>
-    <p class="info__text new-generation__text">Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry.
+    <p class="info__text new-generation__text">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
         when an unknown printer took a galley of type and scrambled it to make a type specimen book.
         It has survived not only five centuries, but also the leap into electronic typesetting, remaining
