--- a/app/index.html
+++ b/app/index.html
@@ -200,7 +200,7 @@
             <img src="images/Twitter.png" alt="" class="social-icons__i-link">
         </a>
         <a href="#" class="social-icons__link">
-            <img src="images/Facebook.jpg" alt="" class="social-icons__i-link">
+            <img src="images/Facebook.png" alt="" class="social-icons__i-link">
         </a>
         <a href="#" class="social-icons__link">
             <img src="images/Pinterest.png" alt="" class="social-icons__i-link">
