--- a/app/index.html
+++ b/app/index.html
@@ -191,8 +191,8 @@
 <footer class="footer">
     <div class="footer__item address">
         <div class="address__company">AOD New York</div>
-        2250 Lexington Avenue <br>
-        <i>New York, NY 10035 - <a href="mailto:info@domain.com" class="address__link">info@domain.com</a></i>
+       <i>2250 Lexington Avenue <br>
+       New York, NY 10035 - <a href="mailto:info@domain.com" class="address__link">info@domain.com</a></i>
 
     </div>
     <div class="footer__item social-icons">
