--- a/app/index.html
+++ b/app/index.html
@@ -191,9 +191,11 @@
 <footer class="footer">
     <div class="footer__item address">
         <div class="address__company">AOD New York</div>
-       <i>2250 Lexington Avenue <br>
-       New York, NY 10035 - <a href="mailto:info@domain.com" class="address__link">info@domain.com</a></i>
-
+        <div>
+            2250 Lexington Avenue<br>
+            New York, NY 10035 -
+        </div>
+        <a href="mailto:info@domain.com" class="address__link">info@domain.com</a>
     </div>
     <div class="footer__item social-icons">
         <a href="#" class="social-icons__link">
